añadiendo link para cuppon

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Portafolio</title>
 </head>
 <body>
-    
+    <h1>Portafolio</h1>
+    <div>
+        <img src="" alt="Imagen de cupón">
+        <p>Descripción proyecto cuppon</p>
+        <a href="./cuppon/index.html">Ir a Cuppon</a>
+    </div>
 </body>
 </html>
