--- a/index.html
+++ b/index.html
@@ -20,11 +20,24 @@
 </head>
 <body>
     <h1 class="text-info">Portafolio</h1>
-    <div>
-        <img src="" alt="Imagen de cupón">
-        <p>Descripción proyecto cuppon</p>
-        <a href="./proyectos/cuppon/index.html">Ir a Cuppon</a>
-        <a href="./proyectos/iguanas/index.html">Ir a Iguanas</a>
-    </div>
+
+    <div class="card" style="width: 18rem;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Proyecto Cuppon</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="./proyectos/cuppon/index.html">Ir a Cuppon</a>
+        </div>
+      </div>
+
+      <div class="card" style="width: 18rem;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Proyecto Iguana</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="./proyectos/iguanas/index.html">Ir a Iguanas</a>
+        </div>
+      </div>
+
 </body>
 </html>
