añadiendo otros proyectos

--- a/index.html
+++ b/index.html
@@ -20,24 +20,41 @@
 </head>
 <body>
     <h1 class="text-info">Portafolio</h1>
+    <section class="d-flex">
+        <div class="card" >
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Proyecto Cuppon</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="./proyectos/cuppon/index.html">Ir a Cuppon</a>
+            </div>
+          </div>
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Proyecto Iguana</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="./proyectos/iguanas/index.html">Ir a Iguanas</a>
+            </div>
+          </div>
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Proyecto Landing</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="./proyectos/landing/index.html">Ir a Landing</a>
+            </div>
+          </div>
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Proyecto Curriculum</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="./proyectos/curriculum/index.html">Ir a Curriculum</a>
+            </div>
+          </div>
+    </section>
 
-    <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Proyecto Cuppon</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="./proyectos/cuppon/index.html">Ir a Cuppon</a>
-        </div>
-      </div>
-
-      <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Proyecto Iguana</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="./proyectos/iguanas/index.html">Ir a Iguanas</a>
-        </div>
-      </div>
 
 </body>
 </html>
