cambio para responsividad

--- a/index.html
+++ b/index.html
@@ -1,60 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-    crossorigin="anonymous"
-  />
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-    crossorigin="anonymous"
-  ></script>
-    <link rel="stylesheet" href="./assets/css/style.css">
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Portafolio</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1 class="text-info">Portafolio</h1>
-    <section class="d-flex">
-        <div class="card" >
-            <img src="..." class="card-img-top" alt="...">
+    <section class="row">
+    <div class="col-sm-12 col-md-6">
+        <div class="card">
+            <img src="..." class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">Proyecto Cuppon</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up the
+                bulk of the card's content.
+              </p>
               <a href="./proyectos/cuppon/index.html">Ir a Cuppon</a>
             </div>
           </div>
-          <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+    </div>
+    <div class="col-sm-12 col-md-6">
+        <div class="card">
+            <img src="..." class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">Proyecto Iguana</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up the
+                bulk of the card's content.
+              </p>
               <a href="./proyectos/iguanas/index.html">Ir a Iguanas</a>
             </div>
           </div>
-          <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+    </div>
+    <div class="col-sm-12 col-md-6">
+        <div class="card">
+            <img src="..." class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">Proyecto Landing</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up the
+                bulk of the card's content.
+              </p>
               <a href="./proyectos/landing/index.html">Ir a Landing</a>
             </div>
           </div>
-          <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+    </div>
+    <div class="col-sm-12 col-md-6">
+        <div class="card">
+            <img src="..." class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">Proyecto Curriculum</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up the
+                bulk of the card's content.
+              </p>
               <a href="./proyectos/curriculum/index.html">Ir a Curriculum</a>
             </div>
           </div>
+    </div>
     </section>
-
-
-</body>
+  </body>
 </html>
