cambiando color de fondo para card cuppon

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h1 class="text-info">Portafolio</h1>
     <section class="row">
     <div class="col-sm-12 col-md-6">
-        <div class="card">
+        <div class="card text-bg-dark">
             <img src="..." class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">Proyecto Cuppon</h5>
