usando d-flex como clase bootstrap

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <body>
     <h1 class="text-info">Portafolio</h1>
     <section class="row">
-    <div class="col-sm-12 col-md-6">
-        <div class="card text-bg-dark">
+    <div class="col-sm-12 col-md-6 d-flex justify-content-center">
+        <div class="card text-bg-dark w-50">
             <img src="..." class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">Proyecto Cuppon</h5>
@@ -34,8 +34,8 @@
             </div>
           </div>
     </div>
-    <div class="col-sm-12 col-md-6">
-        <div class="card">
+    <div class="col-sm-12 col-md-6 d-flex justify-content-center">
+        <div class="card w-50">
             <img src="..." class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">Proyecto Iguana</h5>
@@ -47,8 +47,8 @@
             </div>
           </div>
     </div>
-    <div class="col-sm-12 col-md-6">
-        <div class="card">
+    <div class="col-sm-12 col-md-6 d-flex justify-content-center">
+        <div class="card w-50">
             <img src="..." class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">Proyecto Landing</h5>
@@ -60,8 +60,8 @@
             </div>
           </div>
     </div>
-    <div class="col-sm-12 col-md-6">
-        <div class="card">
+    <div class="col-sm-12 col-md-6 d-flex justify-content-center">
+        <div class="card w-50">
             <img src="..." class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">Proyecto Curriculum</h5>
