añadiendo padding para cards

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <h1 class="text-info">Portafolio</h1>
     <section class="row">
-    <div class="col-sm-12 col-md-6 d-flex justify-content-center">
+    <div class="col-sm-12 col-md-6 d-flex justify-content-center py-2">
         <div class="card text-bg-dark w-50">
             <img src="..." class="card-img-top" alt="..." />
             <div class="card-body">
@@ -30,11 +30,11 @@
                 Some quick example text to build on the card title and make up the
                 bulk of the card's content.
               </p>
-              <a href="./proyectos/cuppon/index.html">Ir a Cuppon</a>
+              <a class="text-light" href="./proyectos/cuppon/index.html">Ir a Cuppon</a>
             </div>
           </div>
     </div>
-    <div class="col-sm-12 col-md-6 d-flex justify-content-center">
+    <div class="col-sm-12 col-md-6 d-flex justify-content-center py-2">
         <div class="card w-50">
             <img src="..." class="card-img-top" alt="..." />
             <div class="card-body">
@@ -47,7 +47,7 @@
             </div>
           </div>
     </div>
-    <div class="col-sm-12 col-md-6 d-flex justify-content-center">
+    <div class="col-sm-12 col-md-6 d-flex justify-content-center py-2">
         <div class="card w-50">
             <img src="..." class="card-img-top" alt="..." />
             <div class="card-body">
@@ -60,7 +60,7 @@
             </div>
           </div>
     </div>
-    <div class="col-sm-12 col-md-6 d-flex justify-content-center">
+    <div class="col-sm-12 col-md-6 d-flex justify-content-center py-2">
         <div class="card w-50">
             <img src="..." class="card-img-top" alt="..." />
             <div class="card-body">
