--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <h1 class="text-info">Portafolio</h1>
     <section class="row">
     <div class="col-sm-12 col-md-6 d-flex justify-content-center py-2">
-        <div class="card text-bg-dark w-50">
-            <img src="..." class="card-img-top" alt="..." />
+        <div class="card text-bg-dark w-75">
+            <img src="./assets/img/spunky.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">Proyecto Cuppon</h5>
               <p class="card-text">
@@ -35,8 +35,8 @@
           </div>
     </div>
     <div class="col-sm-12 col-md-6 d-flex justify-content-center py-2">
-        <div class="card w-50">
-            <img src="..." class="card-img-top" alt="..." />
+        <div class="card w-75">
+            <img src="./assets/img/spunky.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">Proyecto Iguana</h5>
               <p class="card-text">
@@ -48,8 +48,8 @@
           </div>
     </div>
     <div class="col-sm-12 col-md-6 d-flex justify-content-center py-2">
-        <div class="card w-50">
-            <img src="..." class="card-img-top" alt="..." />
+        <div class="card w-75">
+            <img src="./assets/img/spunky.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">Proyecto Landing</h5>
               <p class="card-text">
@@ -61,8 +61,8 @@
           </div>
     </div>
     <div class="col-sm-12 col-md-6 d-flex justify-content-center py-2">
-        <div class="card w-50">
-            <img src="..." class="card-img-top" alt="..." />
+        <div class="card w-75">
+            <img src="./assets/img/spunky.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">Proyecto Curriculum</h5>
               <p class="card-text">
