ocultando elementos en tamaño pequeño

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <h1 class="text-info">Portafolio</h1>
     <section class="row">
-    <div class="col-sm-12 col-md-6 d-flex justify-content-center py-2">
+    <div class="d-sm-none d-md-block col-md-6 d-flex justify-content-center py-2">
         <div class="card text-bg-dark w-75">
             <img src="./assets/img/spunky.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
